testsuite/tests/rename/should_fail/rnfail016.stderr

rnfail016.hs:6:7: error:
    @-syntax in expression context
    Did you mean to enable TypeApplications?
